--- a/HTML/calculateurs/proteines.html
+++ b/HTML/calculateurs/proteines.html
@@ -23,7 +23,16 @@
                 <li><a href="../programme_prise_masse.html">Prise de masse</a></li>
             </ul>
         </li>
-        <li><a href="calories.html">Calculateurs</a></li>
+        <li class="dropdown">
+                <a href="calories.html" class="dropbtn">Calculateurs ▾</a>
+                <ul class="dropdown-content">
+                    <li><a href="../calcul_nutri.html">Calculateur nutritionnel</a></li>
+                    <li><a href="calories.html">Calories</a></li>
+                    <li><a href="imc.html">IMC</a></li>
+                    <li><a href="proteines.html">Protéines</a></li>
+                    <li><a href="imm.html">IMM</a></li>
+                </ul>
+            </li>
         <li><a href="../contact.html">Contact</a></li>
     </ul>
 </nav>
