--- a/HTML/calculateurs/proteines.html
+++ b/HTML/calculateurs/proteines.html
@@ -104,9 +104,10 @@
 
 </main>
 
-<footer class="footer">
-    <p class="footer-content">© 2026 - NutriThub</p>
-</footer>
+    <footer class="footer">     
+        <p class="footer-content"> &copy; 2026 - NutriThub - Site créer par <a href="https://github.com/Edgrc"> Edgar </a> & <a href="https://github.com/Hydrojak/"> Sacha</a> </p>
+        <p class="footer-content">Tu veux nous contacter ? <a href="contact.html" class="link-footer"> C'est par ici !</a></p>
+    </footer>
 
 <script>
 document.getElementById("calculer_prot").addEventListener("click", function () {
