--- a/HTML/programme_perte_poids.html
+++ b/HTML/programme_perte_poids.html
@@ -157,8 +157,8 @@
 
     <footer class="footer">     
         <p class="footer-content"> &copy; 2026 - NutriThub - Site créer par <a href="https://github.com/Edgrc"> Edgar </a> & <a href="https://github.com/Hydrojak/"> Sacha</a> </p>
-        <p class="footer-content">Tu veux nous contacter ? <a href="https://www.greenit.fr/" class="link-footer"> C'est par ici !</a></p>
-    </footer> 
+        <p class="footer-content">Tu veux nous contacter ? <a href="contact.html" class="link-footer"> C'est par ici !</a></p>
+    </footer>
 
 </body>
 </html>
