--- a/HTML/programme_perte_poids.html
+++ b/HTML/programme_perte_poids.html
@@ -10,7 +10,10 @@
     
     <nav>
         <div class="logo-section">
-            <a href="acceuil.html">🥗 NutriThub</a>
+            <a href="acceuil.html">
+                <img src="../media/images/NutriThub_logo.png" alt="Logo NutriThub" class="logo-img">
+                NutriThub
+            </a>
         </div>
         <ul class="nav-links">
             <li><a href="acceuil.html"> <strong> Accueil </strong></a></li>
