Ajout <strong> nav

--- a/HTML/calculateurs/imm.html
+++ b/HTML/calculateurs/imm.html
@@ -34,7 +34,7 @@
                     <li><a href="calories.html">Calories</a></li>
                     <li><a href="imc.html">IMC</a></li>
                     <li><a href="proteines.html">Protéines</a></li>
-                    <li><a href="imm.html">IMM</a></li>
+                    <li><a href="imm.html"> <strong>IMM</strong></a></li>
                 </ul>
             </li>
             <li><a href="../contact.html">Contact</a></li>
