--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -16,7 +16,7 @@
             </a>
         </div>
         <ul class="nav-links">
-            <li><a href="acceuil.html"> <strong> Accueil </strong></a></li>
+            <li><a href="acceuil.html"> Accueil </a></li>
             <li class="dropdown">
                 <a href="programme.html" class="dropbtn">Programme nutritionnel ▾</a>
                 <ul class="dropdown-content">
@@ -37,7 +37,7 @@
                     <li><a href="calculateurs/imm.html">IMM</a></li>
                 </ul>
             </li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html"> <strong>Contact</strong></a></li>
         </ul>
     </nav>
 
