--- a/HTML/calculateurs/calories.html
+++ b/HTML/calculateurs/calories.html
@@ -16,7 +16,7 @@
             </a>
     </div>
     <ul class="nav-links">
-        <li><a href="../acceuil.html"><strong>Accueil</strong></a></li>
+        <li><a href="../acceuil.html">Accueil </a></li>
         <li class="dropdown">
             <a href="../programme.html" class="dropbtn">Programme nutritionnel ▾</a>
             <ul class="dropdown-content">
@@ -30,7 +30,7 @@
                 <a href="calories.html" class="dropbtn">Calculateurs ▾</a>
                 <ul class="dropdown-content">
                     <li><a href="../calcul_nutri.html">Calculateur nutritionnel</a></li>
-                    <li><a href="calories.html">Calories</a></li>
+                    <li><a href="calories.html"> <strong>Calories</strong></a></li>
                     <li><a href="imc.html">IMC</a></li>
                     <li><a href="proteines.html">Protéines</a></li>
                     <li><a href="imm.html">IMM</a></li>
