--- a/HTML/calculateurs/proteines.html
+++ b/HTML/calculateurs/proteines.html
@@ -16,7 +16,7 @@
         </a>
     </div>
     <ul class="nav-links">
-        <li><a href="../acceuil.html"><strong>Accueil</strong></a></li>
+        <li><a href="../acceuil.html">Accueil</a></li>
         <li class="dropdown">
             <a href="../programme.html" class="dropbtn">Programme nutritionnel ▾</a>
             <ul class="dropdown-content">
@@ -32,7 +32,7 @@
                     <li><a href="../calcul_nutri.html">Calculateur nutritionnel</a></li>
                     <li><a href="calories.html">Calories</a></li>
                     <li><a href="imc.html">IMC</a></li>
-                    <li><a href="proteines.html">Protéines</a></li>
+                    <li><a href="proteines.html"> <strong>Protéines</strong></a></li>
                     <li><a href="imm.html">IMM</a></li>
                 </ul>
             </li>
