--- a/HTML/programme.html
+++ b/HTML/programme.html
@@ -19,9 +19,9 @@
             </a>
         </div>
         <ul class="nav-links">
-            <li><a href="acceuil.html"> <strong> Accueil </strong></a></li>
+            <li><a href="acceuil.html"> Accueil </a></li>
             <li class="dropdown">
-                <a href="programme.html" class="dropbtn">Programme nutritionnel ▾</a>
+                <a href="programme.html" class="dropbtn"> <strong>Programme nutritionnel ▾</strong></a>
                 <ul class="dropdown-content">
                     <li><a href="calcul_nutri.html">Calculateur nutritionnel</a></li>
                     <li><a href="programme_debutant.html">Débutant</a></li>
