--- a/HTML/programme_prise_masse.html
+++ b/HTML/programme_prise_masse.html
@@ -16,14 +16,14 @@
             </a>
         </div>
         <ul class="nav-links">
-            <li><a href="acceuil.html"> <strong> Accueil </strong></a></li>
+            <li><a href="acceuil.html"> Accueil </a></li>
             <li class="dropdown">
                 <a href="programme.html" class="dropbtn">Programme nutritionnel ▾</a>
                 <ul class="dropdown-content">
                     <li><a href="calcul_nutri.html">Calculateur nutritionnel</a></li>
                     <li><a href="programme_debutant.html">Débutant</a></li>
                     <li><a href="programme_perte_poids.html">Perte de poids</a></li>
-                    <li><a href="programme_prise_masse.html">Prise de masse</a></li>
+                    <li><a href="programme_prise_masse.html"> <strong>Prise de masse</strong></a></li>
                 </ul>
             </li>
 
