--- a/HTML/acceuil.html
+++ b/HTML/acceuil.html
@@ -50,49 +50,59 @@
     </section>
 
     <!-- VALEUR EDUCATIVE -->
-    <section class="prog-section">
-        <h2>Pourquoi comprendre la nutrition ?</h2>
-        <p>
-            La transformation physique ne repose pas uniquement sur l’entraînement.
-            Comprendre ton métabolisme, ton apport calorique et tes besoins en protéines
-            te permet de progresser plus intelligemment.
-        </p>
-        <p>
-            Chez NutriThub, nous combinons outils pratiques et explications claires
-            pour que tu ne suives pas un plan au hasard, mais que tu comprennes
-            réellement ce que tu fais.
-        </p>
+    <section class="prog-section section-with-img">
+        <div class="text-content">
+            <h2>Pourquoi comprendre la nutrition ?</h2>
+            <p>
+                La transformation physique ne repose pas uniquement sur l’entraînement.
+                Comprendre ton métabolisme, ton apport calorique et tes besoins en protéines
+                te permet de progresser plus intelligemment.
+            </p>
+            <p>
+                Chez NutriThub, nous combinons outils pratiques et explications claires
+                pour que tu ne suives pas un plan au hasard, mais que tu comprennes
+                réellement ce que tu fais.
+            </p>
+        </div>
+        <img src="../media/images/healthy1.avif" alt="Cuisine saine" class="side-img">
     </section>
 
-    <!-- OUTILS -->
-    <section class="prog-section">
-        <h2>Des outils simples et efficaces</h2>
+    <section class="prog-section no-border">
+        <h2 class="section-title">Des outils simples et efficaces</h2>
 
-        <div class="prog-section">
-            <h3>Calculateur de calories</h3>
-            <p>
-                Estime ton métabolisme de base et ta dépense énergétique totale
-                selon ton niveau d’activité et ton objectif.
-            </p>
-            <a href="calculateurs/calories.html" class="prog-button">Calculer mes calories</a>
-        </div>
+        <div class="calculateurs-grid">
+            <div class="calc-card">
+                <div class="card-video-container">
+                    <video autoplay loop muted playsinline class="calc-video">
+                        <source src="../media/videos/animation_fruit1.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <h3>Calculateur de calories</h3>
+                <p>Estime ton métabolisme de base et ta dépense énergétique totale selon ton niveau d’activité.</p>
+                <a href="calculateurs/calories.html" class="prog-button">Calculer</a>
+            </div>
 
-        <div class="prog-section">
-            <h3>Calculateur de protéines</h3>
-            <p>
-                Détermine la quantité idéale de protéines en fonction de ton poids
-                et de ton niveau d’activité.
-            </p>
-            <a href="calculateurs/proteines.html" class="prog-button">Calculer mes protéines</a>
-        </div>
+            <div class="calc-card">
+                <div class="card-video-container">
+                    <video autoplay loop muted playsinline class="calc-video">
+                        <source src="../media/videos/animation_fruit2.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <h3>Calculateur de protéines</h3>
+                <p>Détermine la quantité idéale de protéines en fonction de ton poids et de ton niveau d’activité.</p>
+                <a href="calculateurs/proteines.html" class="prog-button">Calculer</a>
+            </div>
 
-        <div class="prog-section">
-            <h3>Indice de Masse Maigre (IMM)</h3>
-            <p>
-                Évalue ton niveau de masse musculaire indépendamment du poids total,
-                pour une analyse plus précise de ta composition corporelle.
-            </p>
-            <a href="calculateurs/imm.html" class="prog-button">Calculer mon IMM</a>
+            <div class="calc-card">
+                <div class="card-video-container">
+                    <video autoplay loop muted playsinline class="calc-video">
+                        <source src="../media/videos/animation_form1.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <h3>Indice de Masse Maigre</h3>
+                <p>Évalue ton niveau de masse musculaire pour une analyse précise de ta composition corporelle.</p>
+                <a href="calculateurs/imm.html" class="prog-button">Calculer</a>
+            </div>
         </div>
     </section>
 
