Ajout illustrations programme nutritionnel

--- a/HTML/programme.html
+++ b/HTML/programme.html
@@ -45,35 +45,72 @@
     </nav>
 
     <main class="prog-container">
-        <header class="prog-header">
-            <h1>Programme nutritionnel</h1>
-            <p>Découvrez des plans alimentaires adaptés à vos objectifs et votre mode de vie.</p>
+        <header class="prog-header-hero">
+            <div class="hero-overlay">
+                <h1>Programme nutritionnel</h1>
+                <p>Découvrez des plans alimentaires adaptés à vos objectifs et votre mode de vie.</p>
+            </div>
         </header>
 
-        <section class="prog-section">
-            <h2>Qu'est-ce qu'un programme nutritionnel ?</h2>
-            <p>Un programme nutritionnel est un plan structuré d'alimentation personnalisé qui prend en compte vos besoins énergétiques, vos préférences alimentaires et votre mode de vie.</p>
+        <section class="prog-section section-split">
+            <div class="split-text">
+                <h2>Qu'est-ce qu'un programme nutritionnel ?</h2>
+                <p>Un programme nutritionnel est un plan structuré d'alimentation personnalisé qui prend en compte vos besoins énergétiques, vos préférences alimentaires et votre mode de vie.</p>
+            </div>
+            <div class="split-img">
+                <img src="../media/images/healthy2.avif" alt="Planification alimentaire">
+            </div>
         </section>
 
         <section class="prog-section">
-            <h2>À quoi ça sert ?</h2>
-            <ul class="prog-list">
-                <li>Aider à atteindre des objectifs de composition corporelle.</li>
-                <li>Améliorer le niveau d'énergie et les performances physiques.</li>
-                <li>Prévenir les carences et améliorer la qualité de l'alimentation.</li>
-                <li>Offrir des repères clairs pour manger de façon durable.</li>
-            </ul>
+            <h2 style="text-align: center; margin-bottom: 30px;">À quoi ça sert ?</h2>
+            <div class="benefits-grid">
+                <div class="benefit-item">
+                    <div class="benefit-video-container">
+                        <video autoplay loop muted playsinline class="benefit-video">
+                            <source src="../media/videos/animation_objectifs1.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <p>Atteindre tes objectifs de composition corporelle.</p>
+                </div>
+
+                <div class="benefit-item">
+                    <div class="benefit-video-container">
+                        <video autoplay loop muted playsinline class="benefit-video">
+                            <source src="../media/videos/animation_energy.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <p>Améliorer ton niveau d'énergie et tes performances.</p>
+                </div>
+
+                <div class="benefit-item">
+                    <div class="benefit-video-container">
+                        <video autoplay loop muted playsinline class="benefit-video">
+                            <source src="../media/videos/animation_health.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <p>Prévenir les carences et mieux manger au quotidien.</p>
+                </div>
+
+                <div class="benefit-item">
+                    <div class="benefit-video-container">
+                        <video autoplay loop muted playsinline class="benefit-video">
+                            <source src="../media/videos/animation_agenda.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <p>Offrir des repères clairs et durables.</p>
+                </div>
+            </div>
         </section>
 
-        <section class="prog-section">
-            <h2>Contenu typique d'un programme</h2>
-            <p>Un bon programme inclut : un calcul des besoins, la répartition en macronutriments (protéines, lipides, glucides) et des exemples de repas.</p>
-        </section>
-
-        <section class="prog-section section-cta">
-            <h2>Commencer</h2>
-            <p>Choisissez une catégorie dans la navigation pour voir un exemple de plan détaillé.</p>
-            <a href="programme_debutant.html" class="prog-button">Voir le programme Débutant →</a>
+        <section class="prog-section section-cta-final">
+            <h2>Prêt à commencer ?</h2>
+            <p>Choisissez une catégorie pour voir un exemple de plan détaillé et adapter votre alimentation dès aujourd'hui.</p>
+            <div class="cta-buttons">
+                <a href="programme_debutant.html" class="prog-button">Débutant</a>
+                <a href="programme_perte_poids.html" class="prog-button btn-alt">Perte de poids</a>
+                <a href="programme_prise_masse.html" class="prog-button btn-alt">Prise de masse</a>
+            </div>
         </section>
     </main>
 
