--- a/site-html/HTML/index.html
+++ b/site-html/HTML/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="refresh" content="0; url=HTML/acceuil.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NutriThub</title>
+  <title>NutriThub (HTML)</title>
 </head>
 <body>
   <p>Redirection… <a href="HTML/acceuil.html">Accéder au site</a></p>
