--- a/site-html/HTML/programme.html
+++ b/site-html/HTML/programme.html
@@ -45,7 +45,7 @@
     </nav>
 
     <main class="prog-container">
-        <header class="prog-header-hero">
+        <header class="prog-header-hero programme-bg">
             <div class="hero-overlay">
                 <h1>Programme nutritionnel</h1>
                 <p>Découvrez des plans alimentaires adaptés à vos objectifs et votre mode de vie.</p>
