Ajout styles proteines

--- a/site-html/HTML/calculateurs/proteines.html
+++ b/site-html/HTML/calculateurs/proteines.html
@@ -41,44 +41,88 @@
 </nav>
 
 <main class="prog-container">
-
-    <!-- COURS -->
-    <section class="prog-section">
-        <div class="prog-header">
-            <h1>Les protéines</h1>
-            <p>Comprendre leur rôle avant de calculer tes besoins.</p>
+    <header class="prog-header-hero proteines-bg">
+        <div class="hero-overlay">
+            <h1>Les Protéines</h1>
+            <p>Comprendre leur rôle de bâtisseur avant de calculer tes besoins.</p>
         </div>
+    </header>
 
-        <div class="prog-section">
+    <section class="prog-section section-split no-border">
+        <div class="split-text">
             <h2>À quoi servent les protéines ?</h2>
             <p>
-                Les protéines sont essentielles à la construction et à la réparation des tissus,
-                notamment les muscles. Elles participent également à la production d’enzymes,
-                d’hormones et au bon fonctionnement du système immunitaire.
+                Les protéines sont les <strong>briques de ton corps</strong>. Elles sont essentielles à la construction et à la réparation des tissus, notamment les muscles après un effort.
+            </p>
+            <p>
+                Elles ne servent pas qu'aux muscles : elles participent aussi à la production d’enzymes, d’hormones et au bon fonctionnement de ton système immunitaire.
             </p>
         </div>
-
-        <div class="prog-section">
-            <h2>Besoins journaliers</h2>
-            <ul>
-                <li>Sédentaire : ~1.2 g/kg</li>
-                <li>Sport régulier : ~1.6 g/kg</li>
-                <li>Musculation intensive : ~2.0 g/kg</li>
-            </ul>
-            <p>
-                Le besoin dépend principalement de ton niveau d’activité et de ton objectif
-                (maintien, prise de masse, perte de poids).
-            </p>
-        </div>
-
-        <div class="prog-section">
-            <h2>Sources alimentaires</h2>
-            <p>
-                Animales : œufs, poulet, poisson, produits laitiers.<br>
-                Végétales : lentilles, pois chiches, tofu, soja, céréales complètes.
-            </p>
+        <div class="split-img">
+            <img src="../../media/images/protein-illustration.avif" alt="Sources de protéines" class="side-img">
         </div>
     </section>
+
+    <section class="prog-section">
+        <h2 style="text-align: center; margin-bottom: 25px;">Tes besoins selon ton profil</h2>
+        <div class="benefits-grid">
+            <div class="benefit-item">
+                <span class="benefit-icon">🚶</span>
+                <h3>Sédentaire</h3>
+                <p><strong>~1.2 g / kg</strong><br>Pour maintenir la santé globale.</p>
+            </div>
+            <div class="benefit-item">
+                <span class="benefit-icon">🏃</span>
+                <h3>Sport régulier</h3>
+                <p><strong>~1.6 g / kg</strong><br>Optimiser la récupération.</p>
+            </div>
+            <div class="benefit-item">
+                <span class="benefit-icon">🏋️</span>
+                <h3>Musculation</h3>
+                <p><strong>~2.0 g / kg</strong><br>Maximiser la croissance musculaire.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="prog-section">
+        <h2>Où les trouver ?</h2>
+        <div class="info-box-light" style="display: flex; gap: 20px; flex-wrap: wrap;">
+            <div style="flex: 1; min-width: 200px;">
+                <strong>🥩 Sources Animales :</strong>
+                <p>Œufs, poulet, poisson, produits laitiers, bœuf.</p>
+            </div>
+            <div style="flex: 1; min-width: 200px;">
+                <strong>🌱 Sources Végétales :</strong>
+                <p>Lentilles, pois chiches, tofu, soja, céréales complètes.</p>
+            </div>
+        </div>
+    </section>
+
+
+        <section class="prog-section expert-section">
+        <h2 class="section-title">🧬 Le coin des experts : La science derrière</h2>
+
+        <hr class="separator">
+
+        <div class="expert-block section-split reverse">
+            <div class="split-text">
+                <h3>La synthèse protéique et les acides aminés</h3>
+                <p>
+                    Les protéines ne sont pas juste du "carburant". Elles sont décomposées en <strong>acides aminés</strong> qui servent de briques de construction pour tes tissus. 
+                    Sans un apport suffisant, le corps entre en état de catabolisme (il détruit ses propres muscles pour survivre).
+                </p>
+            </div>
+            <div class="split-img">
+                <div class="video-frame">
+                    <video autoplay loop muted playsinline class="science-video">
+                        <source src="../../media/videos/science-proteines.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <!-- CALCULATEUR -->
     <section class="prog-section">
